data/derived/sp14/progs/unify/prog4654.ml.out
Characters 216-218:
  let _ = Format.printf "red   = %s \n" (exprToString e1) in
                                                      ^^
Error: This expression has type int * bool
       but an expression was expected of type expr
